samples/_failures_safe/1761499048_0e1fd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c719e05.c: In function ‘main’:
./samples/SAFE/__tmp_3c719e05.c:182:12: error: missing terminating " character
  182 |     printf("Enter arithmetic expressions (empty
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3c719e05.c:182:5: error: expected expression at end of input
  182 |     printf("Enter arithmetic expressions (empty
      |     ^~~~~~
./samples/SAFE/__tmp_3c719e05.c:182:5: error: expected declaration or statement at end of input
